fix visibility of terminal

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -545,6 +545,7 @@ a.navigator-settings i.settings-enabled {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 5;
 }
 
 #editor-output {
